# Zyberhero-audiovideo

./: .gitattributes  00_COMPLETION_SUMMARY.md  API_KEY_EXPLAINED.md  API_KEY_FIX_QUICK.txt  API_KEY_FLOW.md  API_KEY_FLOW_DIAGRAM.md  API_KEY_QUICK_REF.md  API_KEY_QUICK_REFERENCE.md  API_KEY_VERIFICATION_COMPLETE.md  ARCHITECTURE_GUIDE.md  BEGIN_TESTING_HERE.md  CERTIFICATE_OF_COMPLETION.txt  COMPLETE_SUMMARY.md  COMPLETE_TESTING_GUIDE.md  COMPLETION_SUMMARY.md  CRITICAL_FIXES_APPLIED.md  DONE.sh  DO_THIS_NOW.md  EXACT_CHANGES_MADE.md  FINAL_FIX_SUMMARY.md  FINAL_IMPLEMENTATION.md  FIX_API_KEY_NOT_DETECTED.md  HOW_API_KEY_ACCESSED.md  HOW_API_KEY_IS_ACCESSED.md  HOW_TO_ENABLE_STEREO_MIX.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_DONE.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  LOCAL_WHISPER_IMPLEMENTATION.md  MONITORING_COMPLETE.md  OPTIMIZATION_PLAN.md  PROJECT_AUDIT.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_START.md  QUICK_START.txt  QUICK_START_MONITORING.md  QUICK_TEST_REFERENCE.md  (+29 more)
profanity-service/: Cargo.toml
profanity-service/cpp_integration/: profanity_filter_client.h
profanity-service/src/: Worker.cpp  audio_alert.rs  audio_capture.rs  bad_word_detector.rs  blur_overlay.rs  main.rs  nsfw_detector.rs  pipe_logger.rs  tcp_logger.rs  video_capture.rs  vosk_recognizer.rs  worker.h  zmq_alert_sender.rs
src/: App.css  App.tsx
src-tauri/: Cargo.toml  build.rs  build_error.txt  build_errors.txt  check_short.txt  tauri.conf.json  test_final.txt  test_out.txt  test_output.txt  test_panic.txt
src-tauri/src/: audio_alert.rs  audio_capture.rs  audio_ducking.rs  audio_monitor.rs  audio_monitor_simple.rs  audio_processor.rs  audio_render.rs  bad_word_detector.rs  delay_buffer.rs  lib.rs  realtime_detector.rs  simple_monitor.rs  speech_recognizer.rs  vosk_recognizer.rs  wasapi_capture.rs
