[package]
name = "profanity_filter"
version = "1.0.0"
edition = "2021"
description = "Standalone profanity detection service with audio and video monitoring"

[[bin]]
name = "profanity_filter"
path = "src/main.rs"

[dependencies]
# Audio capture (WASAPI loopback)
cpal = "0.15"

# Speech recognition (Vosk - offline, low latency)
vosk = "0.2"

# Audio playback (for beep)
rodio = "0.17"

# Screen capture
scrap = "0.5"

# ONNX Runtime for NSFW detection
ort = { version = "2.0.0-rc.11", features = ["load-dynamic"] }

# Image processing
image = "0.25"
ndarray = "0.16"

# Serialization for log messages
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# ZeroMQ (pure Rust implementation - no native library needed)
zeromq = "0.5"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "net"] }

# Utilities
parking_lot = "0.12"
chrono = "0.4"
hostname = "0.3"
ctrlc = "3.4"

# Windows-specific
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "namedpipeapi", "fileapi", "handleapi", "winbase", "errhandlingapi", 
    "processthreadsapi", "winuser", "wingdi", "libloaderapi"
] }

[profile.release]
opt-level = 3
lto = true
strip = true
