[package]
name = "zybertest-desktop"
version = "0.1.0"
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "^2.5", features = [] }

[dependencies]
tauri = { version = "^2.10", features = [] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"

tokio = { version = "1.40", features = ["full"] }


# Audio
cpal = "0.15"
rodio = "0.18"
once_cell = "1.19"

# Windows API for WASAPI Loopback
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_Media_Audio", "Win32_System_Com", "Win32_System_Threading", "Win32_UI_Shell", "Win32_System_SystemInformation", "Win32_UI_Shell_PropertiesSystem", "Win32_System_Com_StructuredStorage", "Win32_System_Variant", "Win32_UI_Input_KeyboardAndMouse"] }
regex = "1.10"
chrono = "0.4"
reqwest = { version = "0.12", features = ["json", "multipart", "rustls-tls"] }
tauri-plugin-log = "2"
vosk = "0.2"
anyhow = "1.0"

# Remove whisper-rs - replaced by vosk for lower latency
# whisper-rs = "0.13"
